force-app/main/default/objects/Account/fields/Another_field__c.field-meta.xml
<CustomField>
    <fullName>Another_field__c</fullName>
    <label>Another field</label>
    <length>9</length>
    <type>Text</type>
</CustomField>