force-app/main/default/objects/Account/fields/field_1__c.field-meta.xml
<CustomField>
    <fullName>field_1__c</fullName>
    <label>field 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>