force-app/main/default/objects/Account/fields/field_2__c.field-meta.xml
<CustomField>
    <fullName>field_2__c</fullName>
    <label>field 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>