force-app/main/default/objects/Account/fields/field_3__c.field-meta.xml
<CustomField>
    <fullName>field_3__c</fullName>
    <label>field 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>