force-app/main/default/objects/Account/fields/Test_Deploy_field__c.field-meta.xml
<CustomField>
    <fullName>Test_Deploy_field__c</fullName>
    <label>Test Deploy field</label>
    <length>15</length>
    <type>Text</type>
</CustomField>