force-app/main/default/objects/Account/fields/test_field_again__c.field-meta.xml
<CustomField>
    <fullName>test_field_again__c</fullName>
    <label>test field again</label>
    <length>12</length>
    <type>Text</type>
</CustomField>