force-app/main/default/objects/Account/fields/Test_Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Update_Field__c</fullName>
    <label>Test Update Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>